k8s/jenkins/jenkins-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      securityContext:
        fsGroup: 1000
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.373
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
          resources:
            limits:
              cpu: 800m
              memory: 3Gi
            requests:
              cpu: 100m
              memory: 3Gi
      volumes:
        - name: jenkins-home
          hostPath:
            path: /jenkins/jenkins_data
            type: Directory
status: {}
