k8s/jenkins/jenkins-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /
    prometheus.io/port: '8080'
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
      name: jenkins
