k8s/jenkins/jenkins-slave-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: jenkins-slave
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
      name: jenkins-slave
