k8s/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
    - host: all-infra.jenkins.local.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
